--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
             background: rgba(233, 206, 175, 0.95);
             border-radius: 1rem;
             padding: 2rem;
-            color: white;
+            color: #003C50;
             box-shadow: 0 10px 15px rgba(0,0,0,0.1);
         }
         
@@ -1296,8 +1296,8 @@
     <section id="accueil" class="hero">
         <div class="container">
             <div class="hero-content fade-in-up">
-                <h1>Activez les potentiels<br>de vos équipes</h1>
-                <p class="hero-subtitle">Transformez vos défis en opportunités avec Impactiv. Coaching professionnel et formations expertes pour le management de demain.</p>
+                <h1>Activez les potentiels de vos équipes</h1>
+                <p class="hero-subtitle">Transformez vos défis en opportunités avec Impactiv.<br>Coaching professionnel et formations expertes pour le management de demain.</p>
                 <div class="hero-buttons">
                     <a href="#formations" class="btn-primary">Découvrir nos formations</a>
                 </div>
@@ -1693,131 +1693,6 @@
                                     <li>Fidélisation des talents</li>
 <li>Objectifs atteints plus rapidement</li>
 <li>Culture d'entreprise renforcée</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="formation-card">
-                    <div class="formation-card-inner">
-                        <div class="formation-header">
-                            <h4>SÉRÉNITÉ ACTIVE</h4>
-                        </div>
-                        <div class="formation-meta">
-                            <div class="meta-item">
-                                <svg class="meta-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
-                                <div class="meta-label">7H</div>
-                            </div>
-                            <div class="meta-item">
-                                <svg class="meta-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.25 29.78">
-  <!-- Generator: Adobe Illustrator 30.2.0, SVG Export Plug-In . SVG Version: 2.1.1 Build 105)  -->
-  <defs>
-    <style>
-      .st0 {
-        fill: #b59069;
-      }
-    </style>
-  </defs>
-  <path class="st0" d="M21.18,24c-.43-2.05-2.99-3.34-5.23-3.88.43-.52.9-1.02,1.35-1.51,1.06-1.13,2.15-2.31,2.84-3.82,1.68-3.71,1.11-7.94-1.49-11.04C16.03.63,11.94-.68,7.97.34,5.03,1.09,2.57,3.11,1.23,5.87-.12,8.66-.17,11.88,1.08,14.7c.69,1.55,1.8,2.75,2.88,3.91.45.49.91.99,1.34,1.51-1.38.34-4.72,1.42-5.24,3.87-.43,2.07,1.3,3.39,2.38,4,2.1,1.19,5.14,1.78,8.18,1.78s6.08-.59,8.18-1.78c1.07-.61,2.81-1.94,2.38-4ZM17.86,13.66c-.56,1.28-1.57,2.34-2.54,3.37-.37.39-.73.77-1.08,1.17-.64.75-1.27,1.53-1.87,2.28-.57.71-1.15,1.45-1.76,2.15-.54-.64-1.07-1.3-1.59-1.96-.66-.83-1.34-1.69-2.05-2.5-.35-.4-.71-.79-1.08-1.17-.98-1.03-1.99-2.1-2.56-3.41-1.03-2.39-.84-5.03.51-7.25,1.36-2.23,3.63-3.6,6.23-3.78.19-.01.37-.02.55-.02,2.58,0,4.97,1.23,6.46,3.35,1.61,2.29,1.89,5.2.77,7.78ZM2.6,24.38c.43-1.03,3.1-1.86,4.55-2.06l2.75,3.32.08.07c.48.26,1.04.22,1.46-.13.49-.5.93-1.08,1.35-1.63.39-.5.79-1.03,1.21-1.47l.06-.06s.07-.08.08-.11c1.33.29,2.97.65,4,1.5.39.32.57.62.55.88-.03.36-.43.74-1.2,1.17-3.39,1.88-10.48,1.86-13.81-.04-.62-.36-1.31-.9-1.09-1.44Z"/>
-  <path class="st0" d="M10.29,5.02c-2.03.14-3.74,1.32-4.59,3.15-.84,1.82-.63,3.88.57,5.51,1.01,1.38,2.62,2.18,4.34,2.18.11,0,.22,0,.33-.01,1.87-.11,3.52-1.14,4.43-2.75.99-1.75.93-3.82-.16-5.55-1.09-1.72-2.92-2.66-4.92-2.53ZM13.44,9.8c.28,1.23-.15,2.75-1.74,3.36-1.16.44-2.22.27-2.98-.48-.86-.84-1.18-2.27-.78-3.41.36-1.01,1.24-1.63,2.46-1.73,1.71-.17,2.76,1.03,3.05,2.26Z"/>
-</svg>
-                                <div class="meta-label">PRÉSENTIEL<br>OU VISIO</div>
-                            </div>
-                            <div class="meta-item">
-                                <svg class="meta-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.45 27.28">
-  <!-- Generator: Adobe Illustrator 30.2.0, SVG Export Plug-In . SVG Version: 2.1.1 Build 105)  -->
-  <defs>
-    <style>
-      .st0 {
-        fill: #b59069;
-      }
-    </style>
-  </defs>
-  <path class="st0" d="M39.45,21.47c-.16-1.83-1.05-4.37-2.45-5.69-.87-.82-1.95-1.18-2.98-1.52-.39-.13-.79-.26-1.17-.42-.56-.23-1.09-.5-1.62-.77-.22-.11-.44-.22-.66-.33.01-.01.02-.02.03-.03.16-.18.32-.37.43-.53,1.46-2.22,2.46-5.93,1.18-8.81-.8-1.8-2.35-2.92-4.49-3.25-2.59-.4-4.92.26-6.47,1.81-.97-.18-1.99-.18-2.97,0C16.26-.09,13.12-.33,10.81.35c-1.98.58-3.3,1.96-3.84,3.98-.71,2.67.12,6.16,1.93,8.43-1.05.58-2.18,1.05-3.27,1.47-.23.09-.46.16-.69.23-.4.12-.82.25-1.26.48C1.29,16.22.22,19.26.03,21.47c-.05.55-.03,1.11,0,1.66.02.47.03.94,0,1.4v.21s.11.17.11.17c.04.06.44.59.95.59h5.45v.74c0,.25.13.5.37.7.2.17.53.34.81.34.04,0,.07,0,.11-.01h23.82c.29.05.64-.05.91-.27.26-.21.41-.49.41-.76v-.74h5.45c.5,0,.9-.53.95-.59l.11-.15v-3.28ZM2.35,23.21c-.03-1.58.13-3.63,1.23-5.19.72-1.02,1.75-1.36,2.93-1.75.54-.18,1.1-.37,1.66-.63l1.97,1.12c-2.53,1.39-3.32,4.39-3.56,6.46H2.35ZM17.98,16.59c1.16.46,2.44.44,3.61-.04l-1.82,1.02-1.79-.98ZM27.82,15l-.18.1c-.58.31-.96.51-1.13.59-.16-.05-.47-.19-.6-.24l-.14-.06c-.16-.07-.57-.26-1-.47,1.37.45,2.84.28,4.03-.51l.04.02c-.34.2-.68.39-1.02.58ZM14.71,14.91c-.5.25-1.09.53-1.69.75l-2.4-1.25h.02c1.24.77,2.7.95,4.07.5ZM13.09,18.04c.55-.18,1.12-.36,1.65-.62.31.18.62.36.94.54.9.52,1.83,1.07,2.8,1.52l.2.1c.35.18.79.39,1.22.37.27-.02.65-.19,1.71-.78l.24-.13c.66-.35,1.31-.72,1.95-1.09.32-.19.64-.37.97-.55l3.36,1.27c2.08,1.06,2.56,4.25,2.51,6.31H8.85c-.03-1.83.25-4.1,1.52-5.54.66-.74,1.66-1.06,2.71-1.41ZM29.28,10.63c-.73,1.22-1.71,2.06-2.62,2.25-.48.1-.94.03-1.41-.22.57-1.38,1.57-4.45.58-7.15-.42-1.13-1.14-2.03-2.15-2.66,1.54-.91,4.6-.82,5.84.53,1.68,1.83.85,5.4-.24,7.24ZM23.71,10.04c-.44,1.88-1.82,4.11-3.36,4.58-.85.25-1.71-.03-2.58-.84-1.82-1.71-2.74-5.16-1.97-7.37.49-1.4,1.57-2.18,3.2-2.32.26-.02.52-.03.76-.03,1.48,0,2.59.41,3.3,1.24.89,1.03,1.12,2.72.65,4.76ZM13.65,5.53c-1,2.7,0,5.75.58,7.13-.47.25-.94.31-1.42.22-.91-.19-1.89-1.03-2.61-2.25-.97-1.64-1.6-4.26-.9-6.12.36-.97,1.06-1.63,2.06-1.96.54-.18,1.21-.28,1.9-.28.9,0,1.83.17,2.54.59-1.01.63-1.73,1.53-2.15,2.67ZM32.9,23.21c-.23-2.01-1.02-5.06-3.58-6.47l1.98-1.1c.54.27,1.14.46,1.73.65.8.25,1.55.49,2.06.89,1.76,1.37,2.1,4.17,2.1,6.03h-4.3Z"/>
-</svg>
-                                <div class="meta-label">TOUT PUBLIC</div>
-                            </div>
-                        </div>
-                        <div class="formation-content">
-                            
-                            <div class="formation-description">Développez une posture managériale alignée pour motiver et fédérer vos équipes.</div>
-                        </div>
-                    </div>
-                    <div class="benefits-dropdown">
-                        <div class="benefits-header" onclick="toggleBenefits('management-authentique')">
-                            <h5>Bénéfices</h5>
-                            <svg id="icon-management-authentique" class="dropdown-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m6 9 6 6 6-6"/></svg>
-                        </div>
-                        <div id="benefits-management-authentique" class="benefits-content">
-                            <div class="benefits-text">
-                                <ul class="benefits-list">
-                                    <li>Fidélisation des talents</li>
-<li>Objectifs atteints plus rapidement</li>
-<li>Culture d'entreprise renforcée</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="formation-card">
-                    <div class="formation-card-inner">
-                        <div class="formation-header">
-                            <h4>SÉRÉNITÉ ACTIVE</h4>
-                        </div>
-                        <div class="formation-meta">
-                            <div class="meta-item">
-                                <svg class="meta-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
-                                <div class="meta-label">7H</div>
-                            </div>
-                            <div class="meta-item">
-                                <svg class="meta-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.25 29.78">
-  <!-- Generator: Adobe Illustrator 30.2.0, SVG Export Plug-In . SVG Version: 2.1.1 Build 105)  -->
-  <defs>
-    <style>
-      .st0 {
-        fill: #b59069;
-      }
-    </style>
-  </defs>
-  <path class="st0" d="M21.18,24c-.43-2.05-2.99-3.34-5.23-3.88.43-.52.9-1.02,1.35-1.51,1.06-1.13,2.15-2.31,2.84-3.82,1.68-3.71,1.11-7.94-1.49-11.04C16.03.63,11.94-.68,7.97.34,5.03,1.09,2.57,3.11,1.23,5.87-.12,8.66-.17,11.88,1.08,14.7c.69,1.55,1.8,2.75,2.88,3.91.45.49.91.99,1.34,1.51-1.38.34-4.72,1.42-5.24,3.87-.43,2.07,1.3,3.39,2.38,4,2.1,1.19,5.14,1.78,8.18,1.78s6.08-.59,8.18-1.78c1.07-.61,2.81-1.94,2.38-4ZM17.86,13.66c-.56,1.28-1.57,2.34-2.54,3.37-.37.39-.73.77-1.08,1.17-.64.75-1.27,1.53-1.87,2.28-.57.71-1.15,1.45-1.76,2.15-.54-.64-1.07-1.3-1.59-1.96-.66-.83-1.34-1.69-2.05-2.5-.35-.4-.71-.79-1.08-1.17-.98-1.03-1.99-2.1-2.56-3.41-1.03-2.39-.84-5.03.51-7.25,1.36-2.23,3.63-3.6,6.23-3.78.19-.01.37-.02.55-.02,2.58,0,4.97,1.23,6.46,3.35,1.61,2.29,1.89,5.2.77,7.78ZM2.6,24.38c.43-1.03,3.1-1.86,4.55-2.06l2.75,3.32.08.07c.48.26,1.04.22,1.46-.13.49-.5.93-1.08,1.35-1.63.39-.5.79-1.03,1.21-1.47l.06-.06s.07-.08.08-.11c1.33.29,2.97.65,4,1.5.39.32.57.62.55.88-.03.36-.43.74-1.2,1.17-3.39,1.88-10.48,1.86-13.81-.04-.62-.36-1.31-.9-1.09-1.44Z"/>
-  <path class="st0" d="M10.29,5.02c-2.03.14-3.74,1.32-4.59,3.15-.84,1.82-.63,3.88.57,5.51,1.01,1.38,2.62,2.18,4.34,2.18.11,0,.22,0,.33-.01,1.87-.11,3.52-1.14,4.43-2.75.99-1.75.93-3.82-.16-5.55-1.09-1.72-2.92-2.66-4.92-2.53ZM13.44,9.8c.28,1.23-.15,2.75-1.74,3.36-1.16.44-2.22.27-2.98-.48-.86-.84-1.18-2.27-.78-3.41.36-1.01,1.24-1.63,2.46-1.73,1.71-.17,2.76,1.03,3.05,2.26Z"/>
-</svg>
-                                <div class="meta-label">PRÉSENTIEL<br>OU VISIO</div>
-                            </div>
-                            <div class="meta-item">
-                                <svg class="meta-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.45 27.28">
-  <!-- Generator: Adobe Illustrator 30.2.0, SVG Export Plug-In . SVG Version: 2.1.1 Build 105)  -->
-  <defs>
-    <style>
-      .st0 {
-        fill: #b59069;
-      }
-    </style>
-  </defs>
-  <path class="st0" d="M39.45,21.47c-.16-1.83-1.05-4.37-2.45-5.69-.87-.82-1.95-1.18-2.98-1.52-.39-.13-.79-.26-1.17-.42-.56-.23-1.09-.5-1.62-.77-.22-.11-.44-.22-.66-.33.01-.01.02-.02.03-.03.16-.18.32-.37.43-.53,1.46-2.22,2.46-5.93,1.18-8.81-.8-1.8-2.35-2.92-4.49-3.25-2.59-.4-4.92.26-6.47,1.81-.97-.18-1.99-.18-2.97,0C16.26-.09,13.12-.33,10.81.35c-1.98.58-3.3,1.96-3.84,3.98-.71,2.67.12,6.16,1.93,8.43-1.05.58-2.18,1.05-3.27,1.47-.23.09-.46.16-.69.23-.4.12-.82.25-1.26.48C1.29,16.22.22,19.26.03,21.47c-.05.55-.03,1.11,0,1.66.02.47.03.94,0,1.4v.21s.11.17.11.17c.04.06.44.59.95.59h5.45v.74c0,.25.13.5.37.7.2.17.53.34.81.34.04,0,.07,0,.11-.01h23.82c.29.05.64-.05.91-.27.26-.21.41-.49.41-.76v-.74h5.45c.5,0,.9-.53.95-.59l.11-.15v-3.28ZM2.35,23.21c-.03-1.58.13-3.63,1.23-5.19.72-1.02,1.75-1.36,2.93-1.75.54-.18,1.1-.37,1.66-.63l1.97,1.12c-2.53,1.39-3.32,4.39-3.56,6.46H2.35ZM17.98,16.59c1.16.46,2.44.44,3.61-.04l-1.82,1.02-1.79-.98ZM27.82,15l-.18.1c-.58.31-.96.51-1.13.59-.16-.05-.47-.19-.6-.24l-.14-.06c-.16-.07-.57-.26-1-.47,1.37.45,2.84.28,4.03-.51l.04.02c-.34.2-.68.39-1.02.58ZM14.71,14.91c-.5.25-1.09.53-1.69.75l-2.4-1.25h.02c1.24.77,2.7.95,4.07.5ZM13.09,18.04c.55-.18,1.12-.36,1.65-.62.31.18.62.36.94.54.9.52,1.83,1.07,2.8,1.52l.2.1c.35.18.79.39,1.22.37.27-.02.65-.19,1.71-.78l.24-.13c.66-.35,1.31-.72,1.95-1.09.32-.19.64-.37.97-.55l3.36,1.27c2.08,1.06,2.56,4.25,2.51,6.31H8.85c-.03-1.83.25-4.1,1.52-5.54.66-.74,1.66-1.06,2.71-1.41ZM29.28,10.63c-.73,1.22-1.71,2.06-2.62,2.25-.48.1-.94.03-1.41-.22.57-1.38,1.57-4.45.58-7.15-.42-1.13-1.14-2.03-2.15-2.66,1.54-.91,4.6-.82,5.84.53,1.68,1.83.85,5.4-.24,7.24ZM23.71,10.04c-.44,1.88-1.82,4.11-3.36,4.58-.85.25-1.71-.03-2.58-.84-1.82-1.71-2.74-5.16-1.97-7.37.49-1.4,1.57-2.18,3.2-2.32.26-.02.52-.03.76-.03,1.48,0,2.59.41,3.3,1.24.89,1.03,1.12,2.72.65,4.76ZM13.65,5.53c-1,2.7,0,5.75.58,7.13-.47.25-.94.31-1.42.22-.91-.19-1.89-1.03-2.61-2.25-.97-1.64-1.6-4.26-.9-6.12.36-.97,1.06-1.63,2.06-1.96.54-.18,1.21-.28,1.9-.28.9,0,1.83.17,2.54.59-1.01.63-1.73,1.53-2.15,2.67ZM32.9,23.21c-.23-2.01-1.02-5.06-3.58-6.47l1.98-1.1c.54.27,1.14.46,1.73.65.8.25,1.55.49,2.06.89,1.76,1.37,2.1,4.17,2.1,6.03h-4.3Z"/>
-</svg>
-                                <div class="meta-label">TOUT PUBLIC</div>
-                            </div>
-                        </div>
-                        <div class="formation-content">
-                            <div class="formation-theme">GESTION DU STRESS</div>
-                            <div class="formation-description">Équipez vos collaborateurs d'outils pour gérer le stress et rester performants.</div>
-                        </div>
-                    </div>
-                    <div class="benefits-dropdown">
-                        <div class="benefits-header" onclick="toggleBenefits('serenite-active')">
-                            <h5>Bénéfices</h5>
-                            <svg id="icon-serenite-active" class="dropdown-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m6 9 6 6 6-6"/></svg>
-                        </div>
-                        <div id="benefits-serenite-active" class="benefits-content">
-                            <div class="benefits-text">
-                                <ul class="benefits-list">
-                                    <li>Absentéisme et RPS réduits</li>
-<li>Bien-être optimisé</li>
-<li>Productivité renforcée</li>
                                 </ul>
                             </div>
                         </div>
