--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
             background: rgba(233, 206, 175, 0.95);
             border-radius: 1rem;
             padding: 2rem;
-            color: #003C50;
+            color: white;
             box-shadow: 0 10px 15px rgba(0,0,0,0.1);
         }
         
@@ -714,7 +714,7 @@
             font-size: 1.5rem;
             font-weight: 700;
             margin-bottom: 1.5rem;
-            color: white;
+            color: #003C50;
         }
         
         .contact-items {
@@ -1296,8 +1296,8 @@
     <section id="accueil" class="hero">
         <div class="container">
             <div class="hero-content fade-in-up">
-                <h1>Activez les potentiels de vos équipes</h1>
-                <p class="hero-subtitle">Transformez vos défis en opportunités avec Impactiv.<br>Coaching professionnel et formations expertes pour le management de demain.</p>
+                <h1>Activez les potentiels<br>de vos équipes</h1>
+                <p class="hero-subtitle">Transformez vos défis en opportunités avec Impactiv.<br>Coaching et formations professionnelles pour le management de demain.</p>
                 <div class="hero-buttons">
                     <a href="#formations" class="btn-primary">Découvrir nos formations</a>
                 </div>
