--- a/index.html
+++ b/index.html
@@ -1296,8 +1296,8 @@
     <section id="accueil" class="hero">
         <div class="container">
             <div class="hero-content fade-in-up">
-                <h1>Activez les potentiels<br>de vos équipes</h1>
-                <p class="hero-subtitle">Transformez vos défis en opportunités avec Impactiv.<br>Coaching et formations professionnelles pour le management de demain.</p>
+                <h1>Activez le plein potentiel<br>de vos équipes</h1>
+                <p class="hero-subtitle">Coaching et formations professionnelles pour le management de demain.</p>
                 <div class="hero-buttons">
                     <a href="#formations" class="btn-primary">Découvrir nos formations</a>
                 </div>
