--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@
         <div class="container">
             <div class="hero-content fade-in-up">
                 <h1>Activez le plein potentiel<br>de vos équipes</h1>
-                <p class="hero-subtitle">Coaching et formations professionnelles pour le management de demain.</p>
+                <p class="hero-subtitle">Des formations conçus pour activer les compétences clés de vos collaborateurs.</p>
                 <div class="hero-buttons">
                     <a href="#formations" class="btn-primary">Découvrir nos formations</a>
                 </div>
@@ -1321,7 +1321,7 @@
                 
                 <div class="about-text">
                     <h4 class="section-subtitle">À PROPOS</h4>
-                    <h2>Expertise et Passion pour l'Humain</h2>
+                    <h2>Expertise et passion pour l'Humain</h2>
                     <p>Avec plus de 15 années d'expérience en gestion du changement et croissance organisationnelle, j'accompagne les entreprises dans leurs transitions les plus cruciales.</p>
                     <p>J'ai eu le privilège de transformer des organisations passant de 60 à 7000 employés, en mettant toujours l'humain au cœur de la stratégie.</p>
                     
